WIAPASCAL CHANGE LOG
======================

2024/10/
        18 Re EnumerateItems in TWIADevice.SetSelectedItemIndex;
	   Commented BitDepth part so we use only DataType;
	   SettingsForm with all Items (must be tested)
        17 Added DataType and BitDepth in WIADevice and SettingForm; 
	   Changed TWiaImageFormat names;
        16 Added  ImageFormat functions and Methods;
	   Renamed GetPaperSizeSet to GetPaperSize;
	   Deleted and merged some propTypes into GetProperty/GetPropertyAttributes;
	   Changed some Exception Handling 
        15 Changed Return type of TWiaDevice.GetResolutions to TWIAPropertyFlags; 
	   Added Brightness, Contrast and GetParamsCapabilities in TWiaDevice
	   Added WIACopyCurrent/DefaultValues;
	   Updated SettingsForm;
	   Cleaned up the code a bit
        14 functions in WIA_PaperSizes unit to Calculate Values;
           GetPaperSizeSet use Calculated Values; 
           SetPaperSize use Calculated Pixel Values (WIA_IPS_XEXTENT, etc);
           GetResolutions for List of Valid Values;
           Get/Set Resolution;
           Updated SettingForm and Demo 
        11 First Settings Form code; Added PaperSizes (that does not works)
        10 Added WIA_Settings Form (empty)
           Renamed Demo as Tests and Added a real Demo 
        08 TWIADevice.GetProperty with Default and List of possible Values (Integer)
        04 TWIADevice GetProperty, SetProperty with Formal Type

2024/09/27 Use of Formal Types for TWIADevice.SetProperty/GetProperty
        24 Added TWIAPropertyFlags and WIAPropertyFlags function
	13 Demo List Properties Flags and Vector Values
        06 Added SelectedProperties and RootProperties; 
	   Added SetProperty; 
	   First Download Test with dpi;

2024/09/04 Added Path\FileName and Multiple Pages files to Download; 
	   SelectItem use Internal array intestead of Wia FindItemByName; 
	   Added OnDeviceTransfer Events; 
	   Added Events and Select of Download from Item in Demo;